# ndl-server

./: README.md  face_detection.py  main.py  pyproject.toml
API/: api.py  controller_api.py  mqtt.py  pico_api.py  user_api.py
api/: controller_api.py  members_api.py  user_api.py
core/: face_detection.py  security.py
daemon/: session_token_daemon.py
database/: db_operations.py  faces_db.py  members_db.py  rfid_db.py  session_db.py  users_db.py
dh-keys/local/: private_key.pem  public_key.pem
domains/: member.py  people.py  user.py
face_recognition_util/: compare_faces.py  draw_face.py  encode_faces.py
logs/: logs.py
mqtt/: message_handler.py  mqtt.py
security/: aes.py  dh.py  security.py
util/: endpoints.py  program_codes.py
util/codes/: authorization_codes.py  controller_codes.py  delete_codes.py  member_codes.py  user_codes.py
